gitops/applications/base/istio-gw/istio-gw-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${ARGOCD_ENV_istio_internal_gateway_name}
  namespace: ${ARGOCD_ENV_istio_internal_gateway_namespace}
spec:
  type: NodePort
  selector:
    istio: ${ARGOCD_ENV_istio_internal_gateway_name}
  ports:
  - port: 80
    name: http
    nodePort: ${ARGOCD_ENV_internal_ingress_http_port}
  - port: 443
    name: https
    nodePort: ${ARGOCD_ENV_internal_ingress_https_port}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${ARGOCD_ENV_istio_internal_gateway_name}
  namespace: ${ARGOCD_ENV_istio_internal_gateway_namespace}
spec:
  selector:
    matchLabels:
      istio: ${ARGOCD_ENV_istio_internal_gateway_name}
  template:
    metadata:
      annotations:
        # Select the gateway injection template (rather than the default sidecar template)
        inject.istio.io/templates: gateway
      labels:
        # Set a unique label for the gateway. This is required to ensure Gateways can select this workload
        istio: internal-ingressgateway
        # Enable gateway injection. If connecting to a revisioned control plane, replace with "istio.io/rev: revision-name"
        sidecar.istio.io/inject: "true"
    spec:
      # Allow binding to all ports (such as 80 and 443)
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
        # Drop all privileges, allowing to run as non-root
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1337
          runAsGroup: 1337
