gitops/applications/base/istio-gw/istio-argo.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pdsl-${ARGOCD_ENV_istio_internal_gateway_name}
spec:
  selector:
    istio: ${ARGOCD_ENV_istio_internal_gateway_name}
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.pdslkenya.com" 
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo
#  namespace: argocd
spec:
  hosts:
  - "argo.pdslkenya.com"
  gateways:
  - pdsl-${ARGOCD_ENV_istio_internal_gateway_name}
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
