gitops/applications/base/istio-gw/istio-bulk-sms-backend.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pdsl-bulk-sms-backend
  namespace: dev
spec:
  hosts:
  - "bulk-sms-dev-api.pdslkenya.com"
  gateways:
  - ${ARGOCD_ENV_istio_internal_gateway_namespace}/pdsl-bulk-sms-${ARGOCD_ENV_istio_internal_gateway_name}
  http:
  - match:
    - uri:
        prefix: "/api/auth"
    route:
    - destination:
        host: sms-auth-service.dev.svc.cluster.local
  - match:
    - uri:
        prefix: "/api/audit"
    route:
    - destination:
        host: sms-audit-service.dev.svc.cluster.local
  - match:
    - uri:
        prefix: "/api/contacts"
    route:
    - destination:
        host: sms-contacts-service.dev.svc.cluster.local
  - match:
    - uri:
        prefix: "/api/compliance"
    route:
    - destination:
        host: sms-compliance-service.dev.svc.cluster.local
  - match:
    - uri:
        prefix: "/api/messaging"
    route:
    - destination:
        host: sms-messaging-service.dev.svc.cluster.local
  - match:
    - uri:
        prefix: "/api/payment"
    route:
    - destination:
        host: sms-payment-service.dev.svc.cluster.local
  - match:
    - uri:
        prefix: "/api/message-template"
    route:
    - destination:
        host: sms-message-template-service.dev.svc.cluster.local
  - match:
    - uri:
        prefix: "/api/subscription-pricing"
    route:
    - destination:
        host: sms-subscrptn-prcng-plan-svc.dev.svc.cluster.local
