gitops/applications/base/istio-gw/istio-vault.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pdsl-vault-${ARGOCD_ENV_istio_internal_gateway_name}
  namespace: ${ARGOCD_ENV_istio_internal_gateway_namespace}
spec:
  selector:
    istio: ${ARGOCD_ENV_istio_internal_gateway_name}
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.pdslkenya.com" 
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault-vs
  namespace: vault
spec:
  hosts:
  - "vault.pdslkenya.com"
  gateways:
  - ${ARGOCD_ENV_istio_internal_gateway_namespace}/pdsl-vault-${ARGOCD_ENV_istio_internal_gateway_name}
  http:
  - route:
    - destination:
        host: vault-ui.vault.svc.cluster.local
        port:
          number: 8200
